# orbit

./: .gitignore  CHANGELOG.md  CHULETA.md  CLAUDE.md  DECISIONS.md  DEPENDENCIES.md  DORMANT.md  HOOKSYSTEM.md  IDEAS.md  MODULES.md  MODULES_CHAT.md  ORBIT_REVISION.md  README.md  RING.md  ROADMAP.md  RULES.md  SETUP.md  TUTORIAL.md  google-sync.json  orbit.json  orbit.py  orbit.sh  orbit_ring_daemon.py  pyproject.toml  sync-public.sh
.orbit/: focus.json  session.json
core/: activity.py  add.py  agenda.py  agenda_cmds.py  agenda_view.py  api.py  archive.py  calendar_sync.py  calendar_view.py  calsync.py  cartero.py  cartero_invoke.py  claude.py  clean.py  clip.py  cloud_imgs.py  cloudsync.py  commit.py  config.py  cronograma.py  dateparse.py  deliver.py  doctor.py  done.py  email.py  evaluation.py  focus.py  gimport.py  gsync.py  highlights.py  history.py  hooks.py  hooks_catalog.json  ics.py  ics_share.py  importer.py  inbox.py  list_cmd.py  list_entries.py  log.py  (+34 more)
docs/: CHULETA.md  DECISIONS.md  DEPENDENCIES.md  DORMANT.md  HOOKSYSTEM.md  IDEAS.md  MODULES.md  RING.md
notes/: 2026-04-13_design_cartero.md
scripts/: cleanup_v033_dormant_state.py  diagnose_calendar_sync.py  strip_cloud_marker.py  try_update_calendar_event.py
tests/: conftest.py  test_add.py  test_agenda.py  test_agenda_cmds.py  test_archive.py  test_auto_advance.py  test_calendar_view.py  test_calsync.py  test_cartero.py  test_clean.py  test_clip.py  test_cloud_imgs.py  test_commit_hooks.py  test_config.py  test_cronograma.py  test_dash_coalesce.py  test_date_cmd.py  test_dateparse.py  (+46 more)
(+425 files in other folders)
